--- a/index.html
+++ b/index.html
@@ -3,28 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-do List</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css"/>
+    <title>To-do List</title>
 </head>
 <body>
-    <div class="container">
-        <h1>To-do List</h1>
-        <div>
-            <input type="text" id="input" placeholder="Type something to do">
-            <button id="button">Add</button>
-        </div>      
-
-        <div>
-            <ul id="list">
-                <li>Do some grocery shopping</li>
-                <li>Walk the dog</li>
-                <li>Listen to a podcast</li>
-                <li>Write a journal</li>
-                <li>Call my parents</li>
-            </ul>
+    <header id="main-header">
+        <div class="header">
+            <h1>To-do List</h1>
+            <form id="form">
+                <input type="text" id="input" placeholder="Type something to do">
+                <button class="btn">Add Task</button>
+            </form>
         </div>
+    </header>
+    <div>   
+        <ul id="list"> 
+           
+        </ul>
     </div>
 
-    <script src="main.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
